fixed blurring in projects section

--- a/public/css/sid.css
+++ b/public/css/sid.css
@@ -210,7 +210,6 @@ progress{
 }
 
 .hover-text:hover{
-	filter: blur(10px);
 	background-color: rgba(0,0,0,0.85);
 
 }
